# sdk-nrf

./: west.yml
samples/matter/lock/src/: flash-external.py
subsys/bluetooth/controller/: hci_driver.c
tests/subsys/bootloader/backward_compatibility/nrf_compress/mcuboot_update/: CMakeLists.txt  Kconfig.sysbuild  testcase.yaml
tests/subsys/bootloader/backward_compatibility/smp_svr/: CMakeLists.txt  Kconfig.sysbuild  overlay-bt.conf  prj.conf  testcase.yaml
tests/subsys/bootloader/backward_compatibility/smp_svr/boards/: nrf54h20dk_nrf54h20_cpuapp.conf  nrf54h20dk_nrf54h20_cpuapp_merged_slot.overlay
tests/subsys/bootloader/backward_compatibility/smp_svr/sysbuild/: ipc_radio_merged_slot.overlay  nrf54h20dk_nrf54h20_memory_map_merged_slot.dtsi
tests/subsys/bootloader/backward_compatibility/smp_svr/sysbuild/mcuboot/: prj.conf
tests/subsys/bootloader/backward_compatibility/smp_svr/sysbuild/mcuboot/boards/: nrf54h20dk_nrf54h20_cpuapp_larger_mcuboot.conf  nrf54h20dk_nrf54h20_cpuapp_larger_mcuboot.overlay  nrf54h20dk_nrf54h20_cpuapp_merged_slot.overlay  nrf54l15dk_nrf54l15_cpuapp_larger_mcuboot.conf
tests/subsys/bootloader/backward_compatibility/v3.2/smp_svr/: testcase.yaml
